--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
 <br>
-<u>nama</u> <i>saya</i> <u><b>richad</b></u>
+<u>nama</u> <i>saya</i> <u><b>YOGAWEK</b></u>
 <br>
-alamat di boja
+alamat di KERTANEGARA SELATAN 3
 <br>
-no hp saya 0812
+no hp saya 08967575
 
