mengubah judul jadi ke tengah

--- a/kelas1.html
+++ b/kelas1.html
@@ -1,8 +1,8 @@
-<h1>WEBSITE KELAS 1 SMK WALISONGO</h1>
+<h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
 <a href="kelas1.html">Home</a>
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
 <br>
 selamat datang di website kelas 1
 <br/> 
-<img src="images.jpg" width="200px"/>
+<img src="images.jpg" width="250px"/>
