--- a/kontak.html
+++ b/kontak.html
@@ -1,4 +1,4 @@
-<h1>WEBSITE KELAS 1 SMK WALISONGO</h1>
+h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
 <a href="kelas1.html">Home</a>
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
