menambah tabel, formulir dan tabel absensi

--- a/kelas1.html
+++ b/kelas1.html
@@ -2,6 +2,8 @@
 <a href="kelas1.html">Home</a>
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
+<a href="absensi.html">masuk absensi</a>
+<a href="formulir.html">formulir</a>
 <br>
 selamat datang di website kelas 1
 <br/> 
