--- a/kontak.html
+++ b/kontak.html
@@ -1,6 +1,8 @@
-h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
+<h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
 <a href="kelas1.html">Home</a>
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
+<a href="absensi.html">masuk absensi</a>
+<a href="formulir.html">formulir</a>
 <br>
 ini kontak
