--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
-h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
+<h1><center>WEBSITE KELAS 1 SMK WALISONGO</center></h1>
 <a href="kelas1.html">Home</a>
 <a href="kontak.html">Kontak</a>
 <a href="about.html">About</a>
+<a href="absensi.html">masuk absensi</a>
+<a href="formulir.html">formulir</a>
 <br>
 <u>nama</u> <i>saya</i> <u><b>YOGAWEK</b></u>
 <br>
